Fix position issue on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -247,7 +247,7 @@ header::before {
   }
 
   html {
-    scroll-padding-top: 70px;
+    scroll-padding-top: 50px;
   }
 }
 
